# spoof-busters

./: .gitignore  D5_Texbat_anomalies.csv  D5_Tight_Texbat_anomalies.csv  README.md  pyproject.toml  yunnan_spoofing_times.csv
output/: d1_raimdetector_results.csv  d2_observablesdetector_results.csv  d4_driftdetector_results.csv  d5_combineddetector_intervals.csv  d5_combineddetector_results.csv  d6_dopplerconsistencydetector_results.csv  performance_metrics.csv
results/: trajectory.csv  trajectory.txt
src/: ConvertToCSV.ipynb  detect_spoofing.ipynb  detect_spoofing.py
src/spoofing_detection/: __init__.py  base.py  csv_to_navdata.py  pipeline.py  plotting.py
src/spoofing_detection/detectors/: __init__.py  d1_detector.py  d2_detector.py  d4_detector.py  d5_detector.py  d6_detector.py
texbat_data/: channeldef.txt  ds2.csv  ds3.csv
